--- a/QuanLyCH/Web.config
+++ b/QuanLyCH/Web.config
@@ -15,6 +15,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <!--Email Config-->
+	  <add key="FromEmailAddress" value="hhtt.tuvan@gmail.com" />
+	  <add key="FromEmailDisplayName" value="Đại lý HHTT" />
+	  <add key="FromEmailPassword" value="H123456@" />
+	  <add key="SMTPHost" value="smtp.gmail.com" />
+	  <add key="SMTPPort" value="587" />
+	  <add key="EnabledSSL" value="true" />
+	  <add key="ToEmailAddress" value="hhtt.tuvan@gmail.com" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
